<resources>
    <string name="app_name" translatable="false">Arxict</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="contacts">Contacts</string>
    <string name="post">Posts</string>
    <string name="snackbar_message_connected">Connected</string>
    <string name="snackbar_message_disconnected">No Internet Connection</string>
    <string name="sing_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New User</string>
    <string name="username">User Name</string>
    <string name="finish">Finish</string>
    <string name="shared_pref_signed_in_user"  translatable="false" >SignedInUser</string>
    <string name="shared_pref_signed_in_user_name" translatable="false" >SignedInUserName </string>
    <string name="shared_pref_signed_in_user_email" translatable="false" >SignedInUserEmail</string>
    <string name="field_required">This field is required</string>
    <string name="action_log_out">Log Out</string>
    <string name="logIn_error">Invalid Email or Password</string>
    <string name="email_exist">Email is Already Exist</string>
    <string name="mobile">Mobile</string>
    <string name="no_mail">No Email</string>
    <string name="enter_mail">Enter Email</string>
    <string name="enter_username">Enter user name</string>
    <string name="enter_password">Enter user Password</string>
    <string name="no_post">No posts, please try again later</string>
    <string name="refresh">Refresh</string>


</resources>
