<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="samuel.example.com.arxict.ui.activity.SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_space"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:gravity="center"
        />
    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:padding="@dimen/some_space"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_marginBottom="@dimen/more_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/some_space"
                android:textColor="@color/darker_grey"
                android:text="@string/sign_up"
                android:textSize="@dimen/extra_large_text_size"
                android:gravity="center"/>

            <EditText
                android:gravity="start"
                android:id="@+id/sign_up_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/mid_text_size"
                android:textColor="@color/dark_grey"
                android:padding="@dimen/some_space"
                android:hint="@string/username"
                android:textColorHint="@color/light_grey"
                android:background="@drawable/top_rounded_corners"
                android:inputType="textEmailAddress"/>

            <EditText
                android:layout_marginTop="1dp"
                android:gravity="start"
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/mid_text_size"
                android:textColor="@color/dark_grey"
                android:padding="@dimen/some_space"
                android:hint="@string/email"
                android:textColorHint="@color/light_grey"
                android:background="@color/colorAccent"
                android:inputType="textEmailAddress"/>

            <EditText
                android:layout_marginTop="1dp"
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/mid_text_size"
                android:padding="@dimen/some_space"
                android:hint="@string/password"
                android:textColorHint="@color/light_grey"
                android:textColor="@color/dark_grey"
                android:background="@drawable/bottom_rounded_corners"
                android:inputType="textPassword"
                android:gravity="start"/>

            <Button
                android:layout_marginTop="@dimen/some_space"
                android:layout_marginBottom="@dimen/some_space"
                android:id="@+id/sign_up_finish"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/mid_text_size"
                android:text="@string/finish"
                android:textAllCaps="false" />


            <ProgressBar
                android:layout_margin="@dimen/some_space"
                android:id="@+id/sign_in_progress_bar"
                style="?android:attr/progressBarStyleLargeInverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:theme="@style/ProgressBarStyle"
                android:visibility="gone" />

        </LinearLayout>



    </ScrollView>


</LinearLayout>
