<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="samuel.example.com.arxict.ui.activity.SignInActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_space"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:gravity="center"
        />
    <ScrollView
        android:scrollbars="none"
        android:padding="@dimen/dp_8"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginBottom="@dimen/more_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/some_space"
                android:textColor="@color/darker_grey"
                android:text="@string/sing_in"
                android:textSize="@dimen/extra_large_text_size"
                android:gravity="center"/>

            <EditText
                android:gravity="start"
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/mid_text_size"
                android:textColor="@color/dark_grey"
                android:padding="@dimen/some_space"
                android:hint="@string/email"
                android:textColorHint="@color/light_grey"
                android:background="@drawable/top_rounded_corners"
                android:inputType="textEmailAddress"/>

            <EditText
                android:layout_marginTop="1dp"
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/mid_text_size"
                android:padding="@dimen/some_space"
                android:hint="@string/password"
                android:textColorHint="@color/light_grey"
                android:textColor="@color/dark_grey"
                android:background="@drawable/bottom_rounded_corners"
                android:inputType="textPassword"
                android:gravity="start"/>

            <Button
                android:layout_marginTop="@dimen/some_space"
                android:layout_marginBottom="@dimen/some_space"
                android:id="@+id/btn_login"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/mid_text_size"
                android:text="@string/sing_in"
                android:textAllCaps="false" />


            <LinearLayout
                android:paddingTop="@dimen/some_space"
                android:paddingBottom="@dimen/some_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/light_grey"
                    android:layout_weight="1"/>

                <TextView
                    android:paddingTop="@dimen/some_space"
                    android:paddingBottom="@dimen/some_space"
                    android:paddingLeft="@dimen/little_space"
                    android:paddingRight="@dimen/little_space"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user"
                    android:textSize="@dimen/mid_text_size"
                    android:textColor="@color/light_grey"
                    android:gravity="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/light_grey"
                    android:layout_weight="1"/>
            </LinearLayout>

            <Button
                android:id="@+id/link_signup"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_button"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/mid_text_size"
                android:text="@string/sign_up"
                android:textAllCaps="false" />

            <ProgressBar
                android:layout_margin="@dimen/some_space"
                android:id="@+id/sign_in_progress_bar"
                style="?android:attr/progressBarStyleLargeInverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:theme="@style/ProgressBarStyle"
                android:visibility="gone" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
